finalizado la edicion

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	body{
 
 		/*background:rgb(224, 224, 224);*/
-		background: url('http://i.ytimg.com/vi/-TsMVGrtQn0/maxresdefault.jpg');
+		background: url('img/back-cursos.jpg');
 	}
 		.main{
 
