--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cursos de verano CUCSUR</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href='http://fonts.googleapis.com/css?family=Advent+Pro:400,300,700,500,600' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Patrick+Hand' rel='stylesheet' type='text/css'>
 	<style>
@@ -14,19 +15,24 @@
 			LIGHTBLUE:0394DD
 			PINK:B7508F*/
 			
+	html{
+		background: #2F921D;
 
+	}
 
 	body{
-
 		/*background:rgb(224, 224, 224);*/
 		background: url('img/back-cursos.jpg');
+		background-repeat: no-repeat;
+		margin:0;
+		
 	}
 		.main{
 
 			font-family:'Patrick Hand', sans-serif;
 			background: white;
 			max-width: 900px;
-			height: 1050px;
+			min-height:auto;
 			margin:0 auto;
 			font-weight: 500;
 			color:red;
@@ -52,7 +58,7 @@
 		.foto{
 			margin: 0;
 			width: 100%;
-			height: 100%;
+			height: auto;
 		}
 		.foto img{
 			width: 100%;
