--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
 	
-	<section class="main">
+	<section class="main"><h1>Hola Jonhhy</h1>
 		<figure class="foto">
 			<img src="img/cartel.jpg" alt="">
 		</figure>
